tests/errors/second_stage/operation/symbol_undefined/symbol_undefined.am
arr: .data 1, 2, 3
mov arr[1], arr2[3]
